integ-tests/tests/snapshots/parser__redefine__table_then_dotted_then_table_again.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[duplicate-table]: 
  ┌─ table_then_dotted_then_table_again:6:1
  │    
2 │ ╭   [a]
3 │ │   foo="bar"
  │ ╰──' first table instance
  · │  
6 │   ╭ [a]
7 │   │ 
  │   ╰^ duplicate table


