integ-tests/tests/snapshots/parser__redefine__table_then_inline.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[duplicate-table]: 
  ┌─ table_then_inline:4:9
  │    
2 │ ╭           [a]
3 │ │           b = {}
  │ ╰──' first table instance
4 │   ╭         [a]
5 │   │         
  │   ╰^ duplicate table


