integ-tests/tests/snapshots/parser__redefine__table_then_table.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[duplicate-table]: 
  ┌─ table_then_table:5:1
  │    
2 │ ╭   [a]
3 │ │   foo="bar"
  │ ╰──' first table instance
4 │     b = { foo = "bar" }
5 │   ╭ [a]
6 │   │ 
  │   ╰^ duplicate table


